feat:mexendo com migrations e flyyway